# GNU_LINUX

./: benchtest
01_TerminalProject/: Makefile  Show.c
02_Makefile/: Makefile
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: .gdbinit  Makefile  range.c  test_one.gdb  test_two.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protect_remove.c
07_Environmental/: Makefile.am  configure.ac
07_Environmental/src/: rhasher.c
08_I18n/: CMakeLists.txt  Makefile  find_num.c
09_PatchDiff/: Makefile  lab.c  p1.patch  p2.patch  p3.patch
10_LibTesting/: CMakeLists.txt  run.sh  tests.c
11_Documenting/: CMakeLists.txt  Doxyfile.in  Makefile  find_num.c
11_Documenting/po/: find_num.po
12_InstallPackaging/: CMakeLists.txt  Makefile  buf.h  tests.c
12_InstallPackaging/po/: tests.po
